Nav Heaight Fix on Mobile

--- a/static/style.css
+++ b/static/style.css
@@ -115,7 +115,7 @@ CSS STRUCTURE:
  */
 @media screen and (max-width: 600px) {
     :root {
-        --header-height : 100px;
+        --header-height : 70px;
         --header-height-min   : 80px;
     }
 }
